--- a/train_models.ipynb
+++ b/train_models.ipynb
@@ -2,20 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-6797f4f6060c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcsv\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0msvm_model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mservices\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpre_process_text\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mremove_punctuations\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msvm_model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mservices\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpre_process_text\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mreplace_special_chars\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msvm_model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mservices\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpre_process_text\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mremove_stop_words\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'svm_model'"
+     ],
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'svm_model'",
+     "output_type": "error"
+    }
+   ],
    "source": [
     "import csv\n",
     "import pandas as pd\n",
-    "from svm_model.services.pre_process_text import remove_punctuations\n",
-    "from svm_model.services.pre_process_text import replace_special_chars\n",
-    "from svm_model.services.pre_process_text import remove_stop_words\n",
-    "from svm_model.services.pre_process_text import rejoin_text\n",
+    "from prediction_models.services.pre_process_text import remove_punctuations\n",
+    "from prediction_models.services.pre_process_text import replace_special_chars\n",
+    "from prediction_models.services.pre_process_text import remove_stop_words\n",
+    "from prediction_models.services.pre_process_text import rejoin_text\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn import svm\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -30,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -45,7 +57,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "df['review'] = remove_punctuations(df['review'] )\n",
@@ -56,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -91,16 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vectorizer= joblib.load(\"vectorizer.pkl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -108,24 +115,30 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           1       0.92      0.81      0.86      2846\n",
-      "           2       0.92      0.95      0.93      7817\n",
-      "           4       0.91      0.90      0.90      5249\n",
-      "           5       0.91      0.94      0.92      5228\n",
-      "\n",
-      "    accuracy                           0.92     21140\n",
-      "   macro avg       0.91      0.90      0.91     21140\n",
-      "weighted avg       0.92      0.92      0.91     21140\n",
-      "\n",
-      "0.9151844843897824\n"
-     ]
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-7b759cc99ba8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mvectorizer\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mjoblib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"vectorizer.pkl\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'joblib' is not defined"
+     ],
+     "ename": "NameError",
+     "evalue": "name 'joblib' is not defined",
+     "output_type": "error"
     }
    ],
+   "source": [
+    "vectorizer= joblib.load(\"vectorizer.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
+   "outputs": [],
    "source": [
     "#create svm model\n",
     "#fit training data \n",
@@ -138,69 +151,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['finalized_svm_model.pkl']"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "joblib.dump(lin_clf, \"finalized_svm_model.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
     },
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\programdata\\anaconda3\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:470: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "  self.n_iter_ = _check_optimize_result(\"lbfgs\", opt_res, self.max_iter)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           1       0.81      0.76      0.78      2846\n",
-      "           2       0.89      0.89      0.89      7817\n",
-      "           4       0.83      0.83      0.83      5249\n",
-      "           5       0.87      0.90      0.89      5228\n",
-      "\n",
-      "    accuracy                           0.86     21140\n",
-      "   macro avg       0.85      0.84      0.85     21140\n",
-      "weighted avg       0.86      0.86      0.86     21140\n",
-      "\n",
-      "0.8595553453169347\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "clf = MLPClassifier(solver='lbfgs', alpha=0.001, hidden_layer_sizes=(5, 3), random_state=1)\n",
     "clf.fit(x, y)\n",
@@ -211,45 +182,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['finalized_mlp_model.pkl']"
-      ]
-     },
-     "execution_count": 114,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "joblib.dump(clf, \"finalized_mlp_model.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MLPClassifier \t Good\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mdl= joblib.load(\"finalized_mlp_model.pkl\")\n",
     "rev=\"جيد جدا، استمتع بالاقامة !\"\n",
@@ -269,7 +221,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": []
   }
@@ -295,10 +251,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
